Opened 13 years ago
Closed 13 years ago
#8478 closed bug (fixed)
File disappears when sorted by "Modified" and right clicked.
Reported by: | kallisti5 | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha4 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | kacperkasper@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
- Open a list view of a bunch of files (332 in my case)
- Click the modified header to sort by last modified.
- Right click on a file.
You get a pop-up menu, however the file disappears as it has moved in the list order.
Change History (5)
comment:1 by , 13 years ago
Description: | modified (diff) |
---|
comment:2 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 13 years ago
Description: | modified (diff) |
---|
comment:4 by , 13 years ago
Cc: | added |
---|
comment:5 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
should be fixed in hrev44384. Thanks!
Note:
See TracTickets
for help on using tickets.
I did some research on the bug and I found out that it affects files that are not recognized ("Generic") only. It happens not only when you right click the file but also when you open it (in both cases it gets recognized). Files can be sorted also by size or any other attribute, but for at least 3 files it must be the same (for example 3 files must be 3.40 KiB size). Then when clicked/opened file goes to the first place (sometimes - not always - second, when file at the first place is recognized already) of its "group".
Debugger shows that problem is in BPoseView::_CheckPoseSortOrder, when newIndex = 0; and by that we go to BPoseView::BSearchList which in second "if" returns kInsertAtFront (it probably shouldn't).
Sorry if my comment was misleading. Hope I helped.